[FIX] - Fix dark mode mobile calendar

--- a/ChamCongCLB/app/(dashboard)/calendar/page.module.css
+++ b/ChamCongCLB/app/(dashboard)/calendar/page.module.css
@@ -42,7 +42,7 @@
 .dayViewContainer {
   margin-top: 20px;
   background-color: white;
-  padding: 10px;
+  /* padding: 10px; */
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -62,7 +62,8 @@
 .dropdownCalendar {
   width: 300px;
   background: white;
-  padding: 10px;
+  margin-top: 10px;
+  /* padding: 10px; */
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   position: absolute;
